Update bot pages

--- a/botlistpages/bots.discord.pw.html
+++ b/botlistpages/bots.discord.pw.html
@@ -28,6 +28,9 @@ gb.fuitloop: You're one crazed up fruitloop
 
 gb.image: Gives you a random Danny Phantom related image from google
 
+gb.wiki: Search the Danny Phantom wiki
+gb.wikiuser: Search wikia for users.
+
 gb.help: Your avarage help command
 gb.about: Gives some information about the bot
 </code></pre>
