--- a/botlistpages/bots.discord.pw.html
+++ b/botlistpages/bots.discord.pw.html
@@ -36,4 +36,5 @@ gb.about: Gives some information about the bot
 </code></pre>
 
 <p>It currently only includes voice commands and more commands will be added soon.
-    If you have any ideas for commands to add contact <em>duncte123#1245</em> or join the support guild.</p>
+    If you have any ideas for commands to add contact <em>duncte123#1245</em> or join the
+    <a href="https://discord.gg/NKM9Xtk" target="_blank">support guild</a>.</p>
