--- a/botlistpages/bots.discord.pw.html
+++ b/botlistpages/bots.discord.pw.html
@@ -23,17 +23,18 @@
 <p>Current Command list:</p>
 
 <pre><code class="yaml language-yaml">gb.goingghost: Screams "going ghost" in the voice channel that you are in (has a 5% chance of becoming ghostly)
-gb.wail: Gives you a nice ghostly wail
-gb.fuitloop: You're one crazed up fruitloop
+    gb.wail: Gives you a nice ghostly wail
+    gb.fuitloop: You're one crazed up fruitloop
 
-gb.image: Gives you a random Danny Phantom related image from google
-gb.gif: Gives you a random Danny Phantom gif
+    gb.image: Gives you a random Danny Phantom related image from google
+    gb.gif: Gives you a random Danny Phantom gif
 
-gb.wiki: Search the Danny Phantom wiki
-gb.wikiuser: Search wikia for users.
+    gb.wiki: Search the Danny Phantom wiki
+    gb.wikiuser: Search wikia for users.
 
-gb.help: Your avarage help command
-gb.about: Gives some information about the bot
+    gb.help: Your avarage help command
+    gb.about: Gives some information about the bot
+    gb.quote: gives you a random and totally correct Danny Phantom quote
 </code></pre>
 
 <p>It currently only includes voice commands and more commands will be added soon.
