--- a/botlistpages/bots.discord.pw.html
+++ b/botlistpages/bots.discord.pw.html
@@ -22,9 +22,12 @@
 
 <p>Current Command list:</p>
 
-<pre><code class="yaml language-yaml">gb.goingghost: Screams "going ghost" in the voice channel that you are in (has a 5% chance of becoming ghostly)
+<pre><code class="yaml language-yaml">
+    gb.goingghost: Screams "going ghost" in the voice channel that you are in (has a 5% chance of becoming ghostly)
     gb.wail: Gives you a nice ghostly wail
     gb.fuitloop: You're one crazed up fruitloop
+    gb.boxghost: plays a random boxghost audio clip
+    gb.remember: plays the song in your current voice channel
 
     gb.image: Gives you a random Danny Phantom related image from google
     gb.gif: Gives you a random Danny Phantom gif
@@ -32,9 +35,12 @@
     gb.wiki: Search the Danny Phantom wiki
     gb.wikiuser: Search wikia for users.
 
+    gb.quote: gives you a random and totally correct Danny Phantom quote
+    gb.randomghost: picks a random ghost from the wiki for you
+    gb.game: gives you a DP game (contact duncte123#1234 if you want to add a game to the list)
+
     gb.help: Your avarage help command
     gb.about: Gives some information about the bot
-    gb.quote: gives you a random and totally correct Danny Phantom quote
 </code></pre>
 
 <p>It currently only includes voice commands and more commands will be added soon.
