--- a/botlistpages/bots.discord.pw.html
+++ b/botlistpages/bots.discord.pw.html
@@ -20,7 +20,7 @@
 
 <p>GhostBot is a discord bot made for Danny Phantom fans.</p>
 
-<p>Current Command list:</p>
+<p>Current Command list: <small>Use <code>gb.help [command]</code> for more info about a command</small></p>
 
 <pre><code class="yaml language-yaml">
     gb.goingghost: Screams "going ghost" in the voice channel that you are in (has a 5% chance of becoming ghostly)
@@ -29,6 +29,7 @@
     gb.boxghost: plays a random boxghost audio clip
     gb.remember: plays the song in your current voice channel
 
+    gb.doppelganger: allows you to real the doppelganger comic within discord
     gb.image: Gives you a random Danny Phantom related image from google
     gb.gif: Gives you a random Danny Phantom gif
 
@@ -43,6 +44,5 @@
     gb.about: Gives some information about the bot
 </code></pre>
 
-<p>It currently only includes voice commands and more commands will be added soon.
-    If you have any ideas for commands to add contact <em>duncte123#1245</em> or join the
+<p>This bot is open to feature requests, for feature requests please contact <em>duncte123#1245</em> or join the
     <a href="https://discord.gg/NKM9Xtk" target="_blank">support guild</a>.</p>
