Add the 5yl comic to GhostBot

--- a/botlistpages/bots.discord.pw.html
+++ b/botlistpages/bots.discord.pw.html
@@ -42,6 +42,9 @@
 
     gb.help: Your avarage help command
     gb.about: Gives some information about the bot
+
+    gb.5yl: Allows you to read the 5 years later comic within discord
+    gb.5ylwiki: Search the 5 years later wiki
 </code></pre>
 
 <p>This bot is open to feature requests, for feature requests please contact <em>duncte123#1245</em> or join the
