--- a/botlistpages/bots.discord.pw.html
+++ b/botlistpages/bots.discord.pw.html
@@ -20,32 +20,26 @@
 
 <p>GhostBot is a discord bot made for Danny Phantom fans.</p>
 
-<p>Current Command list: <small>Use <code>gb.help [command]</code> for more info about a command</small></p>
+<p>This bot will fill your voice channel with ghostly sounds and your text channels with ghostly images.</p>
 
-<pre><code class="yaml language-yaml">
-    gb.goingghost: Screams "going ghost" in the voice channel that you are in (has a 5% chance of becoming ghostly)
-    gb.wail: Gives you a nice ghostly wail
+<p>The best part of this bot is that it allows you to read fan comics within discord,
+    the curent comics that you can read in discord with this bot are <a target="_blank" href="https://www.kurothewebsite.com/5yearslater">5 years later</a> and <a target="_blank" href="http://doppelgangercomic.tumblr.com/">Doppelgänger</a></p>
+
+<p>Current Command list:</p>
+
+<pre><code class="yaml language-yaml">    gb.wail: Gives you a nice ghostly wail
     gb.fuitloop: You're one crazed up fruitloop
-    gb.boxghost: plays a random boxghost audio clip
-    gb.remember: plays the song in your current voice channel
 
-    gb.doppelganger: allows you to real the doppelganger comic within discord
     gb.image: Gives you a random Danny Phantom related image from google
     gb.gif: Gives you a random Danny Phantom gif
 
     gb.wiki: Search the Danny Phantom wiki
     gb.wikiuser: Search wikia for users.
 
-    gb.quote: gives you a random and totally correct Danny Phantom quote
-    gb.randomghost: picks a random ghost from the wiki for you
-    gb.game: gives you a DP game (contact duncte123#1234 if you want to add a game to the list)
-
     gb.help: Your avarage help command
     gb.about: Gives some information about the bot
+    gb.quote: gives you a random and totally correct Danny Phantom quote
 
     gb.5yl: Allows you to read the 5 years later comic within discord
     gb.5ylwiki: Search the 5 years later wiki
 </code></pre>
-
-<p>This bot is open to feature requests, for feature requests please contact <em>duncte123#1245</em> or join the
-    <a href="https://discord.gg/NKM9Xtk" target="_blank">support guild</a>.</p>
