Document new command

--- a/botlistpages/bots.discord.pw.html
+++ b/botlistpages/bots.discord.pw.html
@@ -36,10 +36,12 @@
     gb.wiki: Search the Danny Phantom wiki
     gb.wikiuser: Search wikia for users.
 
-    gb.help: Your avarage help command
+    gb.help: Your average help command
     gb.about: Gives some information about the bot
     gb.quote: gives you a random and totally correct Danny Phantom quote
 
     gb.5yl: Allows you to read the 5 years later comic within discord
     gb.5ylwiki: Search the 5 years later wiki
+
+    gb.iss: Does something
 </code></pre>
