Typo in description

--- a/botlistpages/bots.discord.pw.html
+++ b/botlistpages/bots.discord.pw.html
@@ -23,7 +23,7 @@
 <p>This bot will fill your voice channel with ghostly sounds and your text channels with ghostly images.</p>
 
 <p>The best part of this bot is that it allows you to read fan comics within discord,
-    the curent comics that you can read in discord with this bot are <a target="_blank" href="https://www.kurothewebsite.com/5yearslater">5 years later</a> and <a target="_blank" href="http://doppelgangercomic.tumblr.com/">Doppelgänger</a></p>
+    the current comics that you can read in discord with this bot are <a target="_blank" href="https://www.kurothewebsite.com/5yearslater">5 years later</a> and <a target="_blank" href="http://doppelgangercomic.tumblr.com/">Doppelgänger</a></p>
 
 <p>Current Command list:</p>
 
