--- a/botlistpages/bots.discord.pw.html
+++ b/botlistpages/bots.discord.pw.html
@@ -25,10 +25,10 @@
 <p>The best part of this bot is that it allows you to read fan comics within discord,
     the current comics that you can read in discord with this bot are <a target="_blank" href="https://www.kurothewebsite.com/5yearslater">5 years later</a> and <a target="_blank" href="http://doppelgangercomic.tumblr.com/">Doppelgänger</a></p>
 
-<p>Current Command list:</p>
+<p>Current Command list (might be incomplete):</p>
 
 <pre><code class="yaml language-yaml">    gb.wail: Gives you a nice ghostly wail
-    gb.fuitloop: You're one crazed up fruitloop
+    gb.fruitloop: You're one crazed up fruitloop
 
     gb.image: Gives you a random Danny Phantom related image from google
     gb.gif: Gives you a random Danny Phantom gif
